objects/Paid_Time_Off_Request__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_days__c</fullName>
        <inlineHelpText>For half days add 0.5</inlineHelpText>
        <label>Number of days</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid_Time_Off_Allowance__c</fullName>
        <label>Paid Time Off Allowance</label>
        <referenceTo>Paid_Time_Off_Allowance__c</referenceTo>
        <relationshipLabel>Paid Time Off Requests</relationshipLabel>
        <relationshipName>Paid_Time_Off_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <formula>Paid_Time_Off_Allowance__r.User__r.FirstName+&apos; &apos;+Paid_Time_Off_Allowance__r.User__r.LastName</formula>
        <label>User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Working_Holiday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will credit the holiday allowance to the user in exchange for having worked during a holiday.</description>
        <inlineHelpText>Check this tickbox if you are requesting to work on a holiday.  This will credit your holiday allowance.</inlineHelpText>
        <label>Working Holiday</label>
        <type>Checkbox</type>
    </fields>
    <label>Paid Time Off Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>User__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Elena</value>
        </filters>
        <label>steve</label>
    </listViews>
    <listViews>
        <fullName>All_2018</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Number_of_days__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>User__c</columns>
        <columns>Paid_Time_Off_Allowance__c</columns>
        <filterScope>Everything</filterScope>
        <label>All 2019</label>
    </listViews>
    <nameField>
        <displayFormat>PTO Request - {00000}</displayFormat>
        <label>Paid Time Off Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Paid Time Off Requests</pluralLabel>
    <recordTypes>
        <fullName>Approved</fullName>
        <active>true</active>
        <label>Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Negative_Number_of_Days_Worked_Holidays</fullName>
        <active>true</active>
        <description>This rule requires people to submit worked holidays as negative numbers.</description>
        <errorConditionFormula>AND(
    Working_Holiday__c,
    OR(
    ISBLANK(Number_of_days__c),
    NOT(Number_of_days__c=-1),
    (End_Date__c - Start_Date__c)=1
  )
)</errorConditionFormula>
        <errorMessage>Please ensure that each holiday worked is a single day (StartDate and EndDate must be the same day) and that the number is set to -1.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Negative_Number_of_Days_only_for_holiday</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  Working_Holiday__c=false,
  Number_of_days__c&lt;0
)</errorConditionFormula>
        <errorDisplayField>Number_of_days__c</errorDisplayField>
        <errorMessage>Number of Days must be greater than 0 if it is a holiday request.  Only requests for working on holidays, may have a negative number.</errorMessage>
    </validationRules>
</CustomObject>